add entry works

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="#">Stats</a>
             </nav>
         </section>
-        <form action="/" method="post">
+        <form id="media-form">
             <div class="title-input">
                 <label for="titleInput">Title</label>
                 <input type="text" name="title-input" id="titleInput">
@@ -42,7 +42,7 @@
             <button type="submit">Add Entry</button>
         </form>
         <section class="output">
-            <table>
+            <table id="media-list">
                 <thead>
                 <tr>
                     <th>Title</th>
